# ELFFB

./: .gitignore  README.md  eval_minirts.sh  pytest.ini  requirements_dev.txt  result.html  train.py
atari/: CMakeLists.txt
elf/: CMakeLists.txt  shared_replay_buffer.h  utils_elf.py
elf_python/: GCWrapper.py  memory_receiver.py  simulator.py
go/: CMakeLists.txt  README.md  multiple_prediction.py  sgf.cc
rlpytorch/methods/: q_learning.py  rnn_actor_critic.py  value_matcher.py
rlpytorch/runner/: parameter_server.py
rts/: CMakeLists.txt  README.md
rts/engine/: compile_cmds.py
rts/game_CF/: CMakeLists.txt
rts/game_MC/: CMakeLists.txt  actor_critic_changed.py  forward_predict.py
rts/game_TD/: CMakeLists.txt
test_py/: README.md  config.py  test_import.py  test_load_env.py
